[package]
name = "tracing_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
tracing-log = {version= "0.1", features = ["env_logger"]}